# my_digital_life_api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-021c6d13b30a79f37d410466294f8a72665f52262c7b26f15bba1bde38d846ec.json  query-043a7e14dcc1de0102c41b8b670f2ad2c703cca4478cbc60e3dc56eb188e18a1.json  query-29a8d552ae70dfec47d89c9c5d42b117dc83eb6d7d0bc62e9a06190b10ba8172.json  query-4c4118d28525044990cec734b1e10f7bfb8a2d0c3e13206a44b1b59584987a75.json  query-7d4b5dd517bd606e4da34f801b23e6d54f800872a27c8dee1a4f42342298d087.json  query-84eea2e0121203ff0705b4619b742b9db56fa8a7c02816226caf5deb87c84db5.json  query-95574a1552e2096b0a7936a8bff66aee9a2c8feaa68801e83b73f9c3c7dbc6b6.json  query-ad3868dc03be075b2a4e323265a5a1d29da6752cf3c8bf979f0e085cb579deee.json  query-b4d7259060f064c9993741fa56ba234164a5fd67d0b5059efb64d1874249e0ea.json  query-bb448402c349ce4948624336ed4374e3e3777a35fc8f11466a83b435afefb7f6.json  query-e14738be4a3c91ef540facd9faac7f2269a16503c8d2acebd5b306441fc6ee4c.json  query-e1dd7930c2c7701aea10779bf3d8bc85db1cb748f0999d56c0f0c5ab53102213.json  query-e573d9be11e8a488ec3a46b86d101d6739ad7323030ac5df1e433f8a30175464.json  query-e6e70322466a2d7ab7368c12edcefbad3baf0b8e0e7f758a7dd9230a929c4eb6.json  query-e6f44c7cce04564bf2dad09379f3589247a219ec82fd8e5ce9730979eb988e2f.json  query-eee4e53b36e0ccc4966538c7cb57da62edb337f80ddcfb1eca6bbabb120a8dc9.json  query-efaf278456a26045a15674e879058c8681e7613b52cffd3809ce2eb846d3c216.json
configuration/: base.yaml
migrations/: 001_create_users_table.sql  002_verification_codes.sql  003_create_blog_table.sql  004_create_book_table.sql  20230925170708_create_book_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  errors.rs  lib.rs  main.rs  startup.rs
src/extractors/: authentication_token.rs
src/model/: auth.rs  blog.rs  book.rs  common.rs  mod.rs  user.rs
src/repository/: blog.rs  book.rs  mod.rs  user.rs  verification_code.rs
src/routes/: auth.rs  blog.rs  books.rs  mod.rs  test.rs
src/routes/v1/: auth.rs  blog.rs  books.rs  mod.rs
tests/: health_check.rs  utils.rs
