[package]
name = "digital_bookshelf_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "digital_bookshelf_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "bigdecimal", "time"] }
chrono = { version = "0.4.22", features = ["clock", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = "0.11.22"
