[package]
name = "my_digital_life"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "my_digital_life"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] } 
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "bigdecimal", "time",] }
chrono = { version = "0.4.22", features = ["clock", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
dotenvy = "0.15.7"
config = { version = "0.13.4", features = ["yaml"] }
jsonwebtoken = "9"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8.5"
regex = "1.10.2"
secrecy = {version = "0.8.0", features = ["serde"]}

[dev-dependencies]
